# rust_cheatsheet

./: CRDT.md  Cargo.toml  FFI.md  PERFORMANCE.md  README.md  WASM.md  WEB_GPU.md
app1/src/: graph.rs  main.rs
assessment/: README.md  app.js  bank-check.js  index.html  questions.js  questions.test.js  results.js  results.test.js  scoring.js  scoring.test.js  styles.css  validate.js  validate.test.js
assessment/questions/: 01-basics.js  02-ownership.js  03-copy-clone-drop.js  04-lifetimes.js  05-traits-generics.js  06-smart-pointers.js  07-error-handling.js  08-iterators.js  09-concurrency.js  10-async.js  11-atomics-mutex.js  12-unsafe-zst.js  13-performance.js  14-tooling.js  15-language-sugar.js  16-macros-closures.js  17-tokio-internals.js  18-rust-idioms.js
docs/superpowers/plans/: 2026-06-25-rust-assessment.md
docs/superpowers/specs/: 2026-06-25-rust-assessment-design.md
lib1/src/: lib.rs
lib1/src/mod_a/: mod.rs
lib1/src/mod_iter/: mod.rs
pyo3-tabular-accel/: .gitignore  COURSE.md  Cargo.toml  README.md  pyproject.toml
pyo3-tabular-accel/python/: benchmark.py  test_correctness.py
pyo3-tabular-accel/src/: lib.rs
tokio-streams-course/: CRASH_COURSE.md  Cargo.toml  INTERVIEW.md  README.md
